--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
         <module>presto-memsql</module>
         <module>presto-phoenix</module>
         <module>presto-postgresql</module>
+        <module>presto-oracle</module>
         <module>presto-redshift</module>
         <module>presto-sqlserver</module>
         <module>presto-mongodb</module>
@@ -307,6 +308,12 @@
             <dependency>
                 <groupId>io.prestosql</groupId>
                 <artifactId>presto-mysql</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.prestosql</groupId>
+                <artifactId>presto-oracle</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -1315,6 +1322,18 @@
                 <artifactId>presto-maven-plugin</artifactId>
                 <version>9</version>
                 <extensions>true</extensions>
+                <configuration>
+                    <!-- Allow Oracle JDBC driver and its dependencies to be provided only at runtime -->
+                    <allowedProvidedDependencies>
+                        <allowedProvidedDependency>com.oracle.ojdbc:ojdbc8</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:ucp</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:oraclepki</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:osdt_cert</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:osdt_core</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:simplefan</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:ons</allowedProvidedDependency>
+                    </allowedProvidedDependencies>
+                </configuration>
             </plugin>
 
             <plugin>
