--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>io.prestosql</groupId>
     <artifactId>presto-root</artifactId>
-    <version>323</version>
+    <version>323.1</version>
     <packaging>pom</packaging>
 
     <name>presto-root</name>
@@ -102,6 +102,7 @@
         <module>presto-mysql</module>
         <module>presto-phoenix</module>
         <module>presto-postgresql</module>
+        <module>presto-oracle</module>
         <module>presto-redshift</module>
         <module>presto-sqlserver</module>
         <module>presto-mongodb</module>
@@ -300,6 +301,12 @@
             <dependency>
                 <groupId>io.prestosql</groupId>
                 <artifactId>presto-mysql</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.prestosql</groupId>
+                <artifactId>presto-oracle</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -913,7 +920,7 @@
 
             <dependency>
                 <groupId>com.amazonaws</groupId>
-                    <artifactId>aws-java-sdk-kinesis</artifactId>
+                <artifactId>aws-java-sdk-kinesis</artifactId>
                 <version>${dep.aws-sdk.version}</version>
                 <exclusions>
                     <exclusion>
@@ -1336,6 +1343,18 @@
                 <artifactId>presto-maven-plugin</artifactId>
                 <version>8</version>
                 <extensions>true</extensions>
+                <configuration>
+                    <!-- Allow Oracle JDBC driver and its dependencies to be provided only at runtime -->
+                    <allowedProvidedDependencies>
+                        <allowedProvidedDependency>com.oracle.ojdbc:ojdbc8</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:ucp</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:oraclepki</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:osdt_cert</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:osdt_core</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:simplefan</allowedProvidedDependency>
+                        <allowedProvidedDependency>com.oracle.ojdbc:ons</allowedProvidedDependency>
+                    </allowedProvidedDependencies>
+                </configuration>
             </plugin>
 
             <plugin>
